# python_graph_demo

./: .git_ignore  .gitignore  LICENSE  README.md  graphs.ipynb  pyproject.toml  requirements.in  requirements.txt  startit.sh  testit.py
.github/: CODEOWNERS  renovate.json
.github/workflows/: codeql.yaml  codeql.yml  renovate.yaml  renovate.yml  semantic-release.yaml  semantic-release.yaml-disabled  trunk-annotations.yaml  trunk-check.yaml  trunk-update.yaml
.ipynb_checkpoints/: graphs-checkpoint.ipynb  page1-checkpoint.ipynb
.trunk/: trunk.yaml
data/: G.json  cal_graph_w.json  graph.json  karate.json  sample.csv
html/: bg.html
include/css/: style.css
include/images/: graphs.key
include/js/: bg.js  d3.v4.min.js  d3draw.js  d3draw.js.org  doodle.js  forcedirected.js  load.js
scripts/: fromscratch.sh  startjupyter.sh
